# BB_AHVS

./: .acpxrc.json  .gitignore  CLAUDE.md  README.md  Roadmap_TODOs_report.md  install.sh  pyproject.toml
.claude/: settings.json
.claude/commands/ahvs_data_analyst/: gui.md
.claude/commands/ahvs_genesis/: gui.md
.claude/commands/ahvs_multiagent/: gui.md
.claude/commands/ahvs_onboarding/: gui.md
.claude/skills/ahvs_brainstorm/: SKILL.md
.claude/skills/ahvs_data_analyst/: SKILL.md
.claude/skills/ahvs_genesis/: SKILL.md
.claude/skills/ahvs_genesis/references/: gui.md
.claude/skills/ahvs_multiagent/: SKILL.md
.claude/skills/ahvs_multiagent/references/: agent_prompts.md  failure_classification.md  gui.md
.claude/skills/ahvs_onboarding/: SKILL.md
.claude/skills/ahvs_onboarding/references/: artifact_contract.md  eval_command_policy.md  git_mode_policy.md  gui.md
ahvs/: __init__.py  cli.py  code_agent.py  config.py  context_loader.py  contracts.py  evolution.py  executor.py  gui.py  gui_schemas.py  health.py  hypothesis_ops.py  hypothesis_selector.py  installer.py  prompts.py  registry.py  report_viewer.py  result.py  runner.py  sandbox.py  sandbox_config.py  skills.py  stages.py  worktree.py
ahvs/data_analyst/: __init__.py  executor.py  models.py  planner.py  profiler.py  registry.py  synthesizer.py  validators.py
ahvs/data_analyst/configs/: dedup_config.yaml
ahvs/data_analyst/modules/: __init__.py  class_balance.py  cluster.py  duplicates.py  eda.py  export.py  split.py  subsample.py  text_stats.py
ahvs/domain_packs/: __init__.py  data_analyst_prompts.yaml  data_analyst_skills.yaml  ml_prompts.yaml  ml_skills.yaml
ahvs/genesis/: __init__.py  contract.py  registry.py  router.py  solvers.yaml
ahvs/genesis/solvers/: __init__.py  kd_classifier.py
ahvs/llm/: __init__.py  acp_client.py  anthropic_adapter.py  cache.py  client.py
ahvs/templates/: __init__.py  decomposed_analysis_gui.py
ahvs/utils/: thinking_tags.py
docs/: AHVS_KD_integration.md  Deep_Analysis_AHVS_KD.md  KD_improvement_fix.md  ahvs_brainstorm.md  ahvs_data_analyst.md  ahvs_genesis.md  ahvs_multiagent.md  ahvs_onboarding.md  memory_management_system.md  security_analysis.md
docs/ahvs/designs/: 2026-04-08-data-analyst-agent-design.md  2026-04-23-databricks-integration-v1.md  2026-04-23-databricks-integration.md
docs/case_studies/: aebsa.md
tests/: conftest.py  test_ahvs.py  test_gui.py  test_hypothesis_ops.py
