[project]
name = "ahvs"
version = "0.1.0"
description = "Adaptive Hypothesis Validation System — autonomously improve LLM/RAG systems through cyclic hypothesis testing."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "datasketch>=1.6",
]
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
anthropic = ["httpx>=0.24"]
semantic-dedup = [
    "sentence-transformers>=2.0",
    "scikit-learn>=1.0",
    "torch>=2.0",
]
split = ["scikit-learn>=1.0"]
all = [
    "ahvs[anthropic]",
    "ahvs[semantic-dedup]",
    "ahvs[split]",
]
dev = [
    "ahvs[all]",
    "pytest>=7.0",
]

[project.scripts]
ahvs = "ahvs.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ahvs"]
artifacts = ["ahvs/data_analyst/configs/*.yaml"]

[tool.hatch.build.targets.wheel.force-include]
".claude/skills/ahvs_genesis" = "ahvs/_skills/ahvs_genesis"
".claude/skills/ahvs_multiagent" = "ahvs/_skills/ahvs_multiagent"
".claude/skills/ahvs_onboarding" = "ahvs/_skills/ahvs_onboarding"
".claude/commands/ahvs_genesis" = "ahvs/_commands/ahvs_genesis"
".claude/commands/ahvs_multiagent" = "ahvs/_commands/ahvs_multiagent"
".claude/commands/ahvs_onboarding" = "ahvs/_commands/ahvs_onboarding"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
